# libargvs

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/Test/: CMakeLists.txt  main.cpp
Examples/TestVariablePtr/: CMakeLists.txt  main.cpp
Source/: argvs.c  argvs.h  array.c  array.h  libargvs.h  options.c  options.h  utils.c  utils.h  variables.c  variables.h
