CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(PROJ_NAME Test)
IF(CMAKE_BUILD_TYPE AND (CMAKE_BUILD_TYPE STREQUAL "Debug"))
    SET(LIB_LINKS libargvs_debug)
ELSE()
    SET(LIB_LINKS libargvs)
ENDIF()

FILE(GLOB SRCLIST 
    ./main.cpp)

ADD_EXECUTABLE(${PROJ_NAME} ${SRCLIST})
TARGET_LINK_LIBRARIES(${PROJ_NAME} ${LIB_LINKS})